# copilotGPR

./: CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy_mkdocs.yml  publish_pypi.yml
docs/: cli.md  contributing.md  data-formats.md  getting-started.md  index.md  services.md
paper/: paper.bib  paper.md
statforge/: __init__.py  cli.py
statforge/chat/: __init__.py  analyst.py
statforge/config/: schema.yaml
statforge/core/: __init__.py  assumptions.py  cache.py  loader.py  runner.py  selector.py
statforge/models/: __init__.py  bayesian.py  frequentist.py  prior_advisor.py  registry.py
statforge/report/: __init__.py  builder.py  captions.py  formatter.py  methods_builder.py
