[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "statforge"
version = "0.2.0"
description = "Automated Bayesian-frequentist statistics and publication-ready reports"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
  {name = "Samvardhan Singh"}
]
keywords = [
    "statistics", "bayesian", "apa", "research", "reproducibility",
    "psychology", "clinical-trials", "effect-size", "report-generation"
]
classifiers = [
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "statsmodels",
    "pingouin",
    "pymc>=5.0",
    "matplotlib",
    "seaborn",
    "jinja2",
    "python-docx",
    "rich",
    "questionary",
    "joblib",
    "pydantic"
]

[project.optional-dependencies]
full = [
    "pyarrow",
    "pyreadstat",
    "openpyxl",
    "tables",
    "requests",
    "anthropic",
]
excel = ["openpyxl"]
parquet = ["pyarrow"]
spss = ["pyreadstat"]
hdf = ["tables"]
chat = ["anthropic"]
dev = [
    "pytest",
    "hypothesis",
    "mypy"
]

[project.scripts]
statforge = "statforge.cli:main"

[tool.setuptools.packages.find]
include = ["statforge*"]
